# taxi_prediction_fullstack_alicia

./: README.md  pyproject.toml
src/taxipred/backend/: api.py  data_processing.py
src/taxipred/data/: filled_na_lin_reg.csv  filled_na_log_reg.csv  fillna.csv  random_forest.csv  removed_na_lin_reg.csv  removena.csv
src/taxipred/frontend/: app.py
src/taxipred/frontend/stream_pages/: Home.py  Metrics.py  Pred.py  Raw_data.py
src/taxipred/model_development/: cleaning_lin_reg_filledna.ipynb  cleaning_log_reg_fillna.ipynb  cleaning_random_forest.ipynb  cleaning_remove_nan.ipynb  eda.ipynb  fillna_cleaning.ipynb  lin_reg_filledna.ipynb  log_reg_cleaning.ipynb  log_regression.ipynb  model_dev.ipynb  model_dev_lin_filledna.ipynb  model_dev_lin_reg.ipynb  model_dev_log_reg.ipynb  model_dev_log_reg_fillna.ipynb  model_dev_log_regression.ipynb  model_dev_randomforest.ipynb  taxi_price_random_forest.joblib
src/taxipred/utils/: constants.py
