[project]
name = "taxipred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "alicia.gezelius@gamail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
taxipred = "taxipred:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
